packages/errors/test/__snapshots__/CLOUD_PROTOCOL_UPLOAD_AGGREGATE_ERROR.ansi
[31mWarning: We encountered multiple errors while uploading the Test Replay recording for this spec.[39m
[31m[39m
[31mWe attempted to upload the Test Replay recording [95m3[39m[31m times.[39m
[31m[39m
[31m[94mfail whale[39m[31m[39m
[31m[94mfail whale[39m[31m[39m
[31m[94mfail whale[39m[31m[39m